# shelf

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
metadata/: example.yaml
metadata/example/example/: 2024-07-20.yaml
src/shelf/: __init__.py  core.py  formats.py  metadata-v1.schema.json  paths.py  schemas.py  shelf-v1.schema.json  snapshot-v1.schema.json  snapshots.py  steps.py  table-v1.schema.json  table_metadata.py  tables.py  types.py  utils.py
src/shelf/schemas/: shelf-v1.schema.json
tests/: test_shelf.py  test_tables.py
