[project]
name = "shelf"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Lars Yencken", email = "lars@yencken.org" }
]
dependencies = [
    "boto3>=1.34.145",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "pytest>=7.0.0",
    "pyright>=1.1.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
shelve = "shelf:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/shelf"]
