[project]
name = "shelf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.19",
    "duckdb>=1.1.0",
    "jsonschema>=4.23.0",
    "polars>=1.7.1",
    "pyright>=1.1.380",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "rich>=13.8.1",
]

[project.scripts]
shelf = "shelf:main"

[tool.hatch.build.targets.wheel]
packages = ["src/shelf"]
